# CMakeTest

./: README.md
Ep002/source/: CMakeLists.txt  main.cpp
Ep005/source/: CMakeLists.txt  main.cpp
Ep005/source/include/: dog.h
Ep005/source/src/: dog.cpp  operations.cpp
